Added env frontend url, updated server js and used io

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://vansh:arbitprofit@arbitprofit.oobtnol.mongodb.net/
 ODDS_API_KEY=9a27ff72a3be1dc2473e33a3a0139f50
+FRONTEND_URL=http://localhost:3000
