updated method of multiple api keys, corrected sorting logic, error handling improved, improved ui

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://vansh:arbitprofit@arbitprofit.oobtnol.mongodb.net/
-ODDS_API_KEY=9a27ff72a3be1dc2473e33a3a0139f50
+ODDS_API_KEY=e225e2b220bdcaaf09b2c2032a78f31d
 FRONTEND_URL=http://localhost:3000
+CREDIT_SAFETY_LIMIT=450
