--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://vansh:arbitprofit@arbitprofit.oobtnol.mongodb.net/
-ODDS_API_KEY=e225e2b220bdcaaf09b2c2032a78f31d
+MONGO_URI=mongodb+srv://admin:surebetprod@surebetprod.9uqfwok.mongodb.net/?retryWrites=true&w=majority&appName=SureBetProd
+ODDS_API_KEY=f7bf2bae2b853a5d7178ca8d3eb428170
 FRONTEND_URL=http://localhost:3000
 CREDIT_SAFETY_LIMIT=450
